# forge-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  RELEASE.md
cargo-forge/: Cargo.toml  README.md
cargo-forge/src/: embedded.rs  fbuild.rs  init.rs  main.rs  new.rs  nro.rs
cargo-forge/templates/: armv7a-none-eabi.json  exported.txt  switch32.ld
forge/: Cargo.toml  README.md  build.rs
forge-macros/: Cargo.toml  README.md
forge-macros/src/: hook.rs  lib.rs  pure_virtual.rs
forge-rt/: Cargo.toml  README.md
forge-rt/src/: fmt.rs  lib.rs
forge-sys/: Cargo.toml  README.md
forge-sys/imgui/: wrapper.h
forge-sys/imgui/shim/: stdio.h
forge-sys/src/: cpp.rs  graphics.rs  hook.rs  imgui.rs  imgui_bindings.rs  init.rs  input.rs  lib.rs  log.rs  mem.rs  patch.rs  pattern.rs  singleton.rs  socket.rs
forge-sys/src/os/: barrier.rs  condvar.rs  event.rs  light_event.rs  mod.rs  mutex.rs  thread.rs  time.rs  tls.rs
forge/src/: allocator.rs  graphics.rs  hook.rs  input.rs  lib.rs  log.rs  mem.rs  patch.rs  pattern.rs  singleton.rs
forge/src/imgui/: color.rs  context.rs  drag.rs  draw.rs  font.rs  input.rs  item.rs  layout.rs  menu.rs  mod.rs  plot.rs  popup.rs  slider.rs  stack.rs  table.rs  tooltip.rs  tree.rs  widgets.rs  window.rs
forge/src/log/: util.rs
forge/src/mt/: crc.rs  datatype.rs  dti.rs  error.rs  fs.rs  mod.rs  object.rs  property.rs  property_list.rs
forge/src/os/: barrier.rs  condvar.rs  event.rs  lazy_lock.rs  light_event.rs  lock.rs  mod.rs  mutex.rs  once_lock.rs  this_thread.rs  thread.rs  tls.rs
forge/src/socket/: mod.rs  tcp_server.rs  tcp_stream.rs
targets/: armv8a-none-eabi.json
tools/imgui-bindgen/: Cargo.toml
tools/imgui-bindgen/src/: main.rs
