[package]
name = "cargo-mhgu-forge"
version = "0.1.0"
edition = "2024"
description = "cargo subcommand for initializing and building MHGU forge plugins"
license = "MIT"
repository = "https://github.com/Fexty12573/forge-rs"
keywords = ["forge", "nro", "switch", "mhgu", "cargo-subcommand"]
categories = ["game-engines", "development-tools"]

[[bin]]
name = "cargo-forge"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
toml = "1.1.2"
serde = { version = "1", features = ["derive"] }
