[package]
name = "mhgu-forge-macros"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for forge plugins"
license = "MIT"
repository = "https://github.com/TODO/forge-rs"
keywords = ["forge", "nro", "switch", "mhgu", "macros"]
categories = ["no-std", "game-engines"]

[lib]
name = "forge_macros"
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "visit-mut"] }
