[package]
name = "mhgu-forge-rt"
version.workspace = true
edition.workspace = true
description = "NRO runtime startup (MOD0 Header, init/fini, etc.) for forge plugins"
license.workspace = true
repository.workspace = true
keywords = ["forge", "nro", "switch", "mhgu", "no-std"]
categories = ["no-std", "game-engines", "embedded"]

[lib]
name = "forge_rt"
path = "src/lib.rs"
