[package]
name = "mhgu-forge-sys"
version.workspace = true
edition.workspace = true
description = "Raw FFI bindings to the forge plugin API"
license.workspace = true
repository.workspace = true
keywords = ["forge", "nro", "switch", "mhgu", "no-std"]
categories = ["no-std", "game-engines", "embedded"]

[lib]
name = "forge_sys"
path = "src/lib.rs"
