[package]
name = "mhgu-forge"
version.workspace = true
edition.workspace = true
description = "Rust API for writing forge plugins for MHGU"
license.workspace = true
repository.workspace = true
keywords = ["forge", "nro", "switch", "mhgu", "no-std"]
categories = ["no-std", "game-engines", "embedded"]

[lib]
name = "forge"
path = "src/lib.rs"

[features]
default = []
allocator = []
patterns = ["allocator"]

[dependencies]
mhgu-forge-sys = { path = "../forge-sys" }
mhgu-forge-rt = { path = "../forge-rt" }
mhgu-forge-macros = { path = "../forge-macros" }
log = { version = "0.4", default-features = false }
