[package]
name = "mhgu-forge"
version.workspace = true
edition.workspace = true
description = "Rust API for writing forge plugins for MHGU"
license.workspace = true
repository.workspace = true
keywords = ["forge", "nro", "switch", "mhgu", "no-std"]
categories = ["no-std", "game-engines", "embedded"]

[lib]
name = "forge"
path = "src/lib.rs"

[features]
default = ["mt"]
allocator = []
patterns = ["allocator"]
mt = ["allocator"]

[dependencies]
mhgu-forge-sys = { workspace = true }
mhgu-forge-rt = { workspace = true, features = ["logging"] }
mhgu-forge-macros = { workspace = true }
log = { version = "0.4", default-features = false }
